# zener-cli

./: .env.example  .gitignore  AGENTS.md  DEV.md  LICENSE  OPENCODE_PATTERNS.md  README.md  pyproject.toml
server/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  main.py  pyproject.toml  requirements.txt
server/server/: __init__.py  adk_agent.py  adk_loop.py  agent.py  auth.py  executor.py  gemini_loop.py  hive.py  image_utils.py  live_loop.py  router.py  safety.py  session.py  stream.py
src/zener/: __init__.py  _vision.py  agent.py  cli.py  config.py  executor.py  firebase.py  loop.py  macos.py  memory.py  yabai.py
