[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zener-cli"
version = "0.1.0"
description = "AI-powered CLI assistant for macOS with Gemini Vision"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "click>=8.1.0",
    "firebase-admin>=6.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "requests>=2.31.0",
]

[project.scripts]
zener = "zener.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zener"]
