[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zener-cli"
version = "0.3.0"
description = "AI desktop automation agent for macOS — cloud-powered via Vertex AI on Cloud Run"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Cloud auth + WebSocket client
    "google-auth>=2.29.0",
    "google-auth-httplib2>=0.2.0",
    "websockets>=12.0",
    # Vision (local screenshot description before connecting)
    "google-genai>=1.0.0",
    # macOS input control
    "pyautogui>=0.9.54",
    # CLI
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "requests>=2.31.0",
]

[project.scripts]
zener = "zener.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zener"]
